Switched to new formatter code, credits, ported every command to the new system, rebalanced several commands and removed obsolete commands