@@ -1,13 +1,11 @@
 package com.botdiril.command.currency;
 
-import net.dv8tion.jda.api.EmbedBuilder;
-
-import java.util.Comparator;
-
-import com.botdiril.framework.command.CommandContext;
 import com.botdiril.framework.command.Command;
 import com.botdiril.framework.command.CommandCategory;
+import com.botdiril.framework.command.context.ChatCommandContext;
+import com.botdiril.framework.command.context.CommandContext;
 import com.botdiril.framework.command.invoke.CmdInvoke;
+import com.botdiril.framework.response.ResponseEmbed;
 import com.botdiril.userdata.IIdentifiable;
 import com.botdiril.userdata.card.Card;
 import com.botdiril.userdata.icon.Icons;
@@ -15,32 +13,37 @@ import com.botdiril.userdata.item.Item;
 import com.botdiril.userdata.item.ShopEntries;
 import com.botdiril.util.BotdirilFmt;
 
+import java.text.MessageFormat;
+import java.util.Comparator;
+
 @Command(value = "illegalkekmarket", aliases = { "kekmarket", "blackmarket",
         "kekshop" }, category = CommandCategory.CURRENCY, description = "Visit the illegal kek market.")
 public class CommandTokenShop
 {
-    private static void addItems(EmbedBuilder eb, IIdentifiable item)
+    private static void addItems(ResponseEmbed eb, IIdentifiable item)
     {
         if (!ShopEntries.canBeBoughtForTokens(item))
         {
             return;
         }
 
-        String sub = "**ID:** " +
-                     item.getName() +
-                     "\n**Price:** " +
-                     BotdirilFmt.format(ShopEntries.getTokenPrice(item)) +
-                     Icons.TOKEN +
-                     "\n";
+        var sub = """
+        **ID:** %s
+        **Price:**: %s
+        """.formatted(item.getName(), BotdirilFmt.amountOfMD(ShopEntries.getTokenPrice(item), Icons.TOKEN));
+
         eb.addField(item.inlineDescription(), sub, true);
     }
 
     @CmdInvoke
     public static void shop(CommandContext co)
     {
-        var eb = new EmbedBuilder();
+        var eb = new ResponseEmbed();
         eb.setTitle("Black Market");
-        eb.setDescription(String.format("Use your %s to buy some items.\nYou have **%s** %s.", Icons.TOKEN, BotdirilFmt.format(co.ui.getKekTokens()), Icons.TOKEN));
+        eb.setDescription("""
+        Use your %s to buy some items.
+        You have %s.
+        """.formatted(Icons.TOKEN, BotdirilFmt.amountOfMD(co.inventory.getKekTokens(), Icons.TOKEN)));
         eb.setColor(0x008080);
 
         Item.items().stream()
@@ -53,7 +56,8 @@ public class CommandTokenShop
             .sorted(Comparator.comparing(ShopEntries::getTokenPrice))
             .forEach(card -> addItems(eb, card));
 
-        eb.setFooter("Tip: Use `%sexchange <item> [amount]` or `%siteminfo <item>`.".replace("%s", co.usedPrefix), null);
+        if (co instanceof ChatCommandContext cch)
+            eb.setFooterText(MessageFormat.format("Tip: Use `{0}{1} <item> [amount]` or `{0}iteminfo <item>`.", cch.usedPrefix, cch.usedAlias));
 
         co.respond(eb);
     }
