@@ -1,21 +1,21 @@
 package com.botdiril.command.inventory;
 
+import com.botdiril.discord.framework.command.context.DiscordCommandContext;
 import com.botdiril.framework.command.Command;
 import com.botdiril.framework.command.CommandCategory;
-import com.botdiril.framework.command.CommandContext;
+import com.botdiril.framework.command.context.CommandContext;
 import com.botdiril.framework.command.invoke.CmdInvoke;
 import com.botdiril.framework.command.invoke.CmdPar;
-import net.dv8tion.jda.api.EmbedBuilder;
-import net.dv8tion.jda.api.entities.MessageEmbed.Field;
-
-import java.util.stream.Collectors;
-
+import com.botdiril.framework.response.ResponseEmbed;
 import com.botdiril.userdata.EnumCurrency;
 import com.botdiril.userdata.icon.IconUtil;
 import com.botdiril.userdata.item.CraftingEntries;
 import com.botdiril.userdata.item.Item;
+import com.botdiril.userdata.item.ItemPair;
 import com.botdiril.userdata.item.ShopEntries;
 import com.botdiril.util.BotdirilFmt;
+
+import java.util.stream.Collectors;
 
 @Command(value = "iteminfo", aliases = {
         "ii" }, category = CommandCategory.ITEMS, description = "Shows important information about an item")
@@ -24,28 +24,29 @@ public class CommandItemInfo
     @CmdInvoke
     public static void show(CommandContext co, @CmdPar("item") Item item)
     {
-        var eb = new EmbedBuilder();
+        var eb = new ResponseEmbed();
         eb.setTitle(item.inlineDescription());
         eb.setDescription(item.getDescription());
         eb.setColor(0x008080);
 
-        eb.setThumbnail(IconUtil.urlFromIcon(co.jda, item));
+        if (co instanceof DiscordCommandContext dcc)
+            eb.setThumbnail(IconUtil.urlFromIcon(dcc.jda, item));
 
         eb.addField("ID:", item.getName(), true);
 
         if (ShopEntries.canBeBought(item))
         {
-            eb.addField(new Field("Buys for:", BotdirilFmt.format(ShopEntries.getCoinPrice(item)) + " " + EnumCurrency.COINS.getIcon(), true));
+            eb.addField("Buys for:", BotdirilFmt.amountOf(ShopEntries.getCoinPrice(item), EnumCurrency.COINS.getIcon()), true);
         }
 
         if (ShopEntries.canBeSold(item))
         {
-            eb.addField(new Field("Sells for:", BotdirilFmt.format(ShopEntries.getSellValue(item)) + " " + EnumCurrency.COINS.getIcon(), true));
+            eb.addField("Sells for:",  BotdirilFmt.amountOf(ShopEntries.getSellValue(item), EnumCurrency.COINS.getIcon()), true);
         }
 
         if (ShopEntries.canBeBoughtForTokens(item))
         {
-            eb.addField(new Field("Exchanges for:", BotdirilFmt.format(ShopEntries.getTokenPrice(item)) + " " + EnumCurrency.TOKENS.getIcon(), true));
+            eb.addField("Exchanges for:",  BotdirilFmt.amountOf(ShopEntries.getTokenPrice(item), EnumCurrency.TOKENS.getIcon()), true);
         }
 
         var recipe = CraftingEntries.search(item);
@@ -53,13 +54,16 @@ public class CommandItemInfo
         if (recipe != null)
         {
             var components = recipe.getComponents();
-            var recipeParts = components.stream().map(comp -> String.format("**%s %s**", BotdirilFmt.format(comp.getAmount()), comp.getItem().inlineDescription())).collect(Collectors.joining(" + "));
-            eb.addField("Crafts from", recipeParts + "\n*Recipe yields " + BotdirilFmt.format(recipe.getAmount()) + " item(s).*", false);
+            var recipeParts = components.stream().map(ItemPair::toString).collect(Collectors.joining(" + "));
+            eb.addField("Crafts from", """
+            **%s**
+            *Recipe yields %s item(s).*
+            """.formatted(recipeParts, BotdirilFmt.format(recipe.getAmount())), false);
         }
 
         if (ShopEntries.canBeDisenchanted(item))
         {
-            eb.addField(new Field("Disenchants for:", BotdirilFmt.format(ShopEntries.getDustForDisenchanting(item)) + " " + EnumCurrency.DUST.getIcon(), false));
+            eb.addField("Disenchants for:",  BotdirilFmt.amountOf(ShopEntries.getDustForDisenchanting(item), EnumCurrency.DUST.getIcon()), false);
         }
 
         eb.setFooter(item.getFootnote(co), null);
