@@ -1,40 +1,65 @@
 package com.botdiril.userdata.tempstat;
 
+import com.botdiril.framework.EntityPlayer;
+import com.botdiril.framework.command.context.CommandContext;
+import com.botdiril.userdata.icon.Icons;
 import com.botdiril.userdata.properties.PropertyObject;
-import com.botdiril.framework.command.CommandContext;
 import com.botdiril.util.BotdirilRnd;
+
 import cz.tefek.pluto.chrono.MiniTime;
 
 public class Curser
 {
     public static void bless(CommandContext co)
     {
+        bless(co, co.player);
+    }
+
+    public static void curse(CommandContext co)
+    {
+        curse(co, co.player);
+    }
+
+    public static void bless(CommandContext co, EntityPlayer player)
+    {
         var blessings = EnumBlessing.values();
         var blessing = BotdirilRnd.choose(blessings);
 
+        bless(co, player, blessing);
+    }
+
+    public static void curse(CommandContext co, EntityPlayer player)
+    {
+        var curses = EnumCurse.values();
+        var curse = BotdirilRnd.choose(curses);
+
+        curse(co, player, curse);
+    }
+
+    public static void bless(CommandContext co, EntityPlayer player, EnumBlessing blessing)
+    {
         var millis = blessing.getDurationInSeconds() * 1000;
         var strTime = MiniTime.formatDiff(millis);
 
         if (isBlessed(co, blessing))
         {
-            co.po.extendBlessing(blessing, millis);
+            co.userProperties.extendBlessing(blessing, millis);
         }
         else
         {
-            co.po.setBlessing(blessing, System.currentTimeMillis() + millis);
+            co.userProperties.setBlessing(blessing, System.currentTimeMillis() + millis);
         }
 
-        co.respond(String.format("You've been **blessed** with the **%s** for **%s**. **%s**", blessing.getLocalizedName(), strTime, blessing.getDescription()));
+        var who = player.equals(co.player) ? "You've" : "%s has".formatted(player.getMention());
+        co.respondf("%s been **blessed** with the **%s** for **%s**. **%s**", who, blessing.getLocalizedName(), strTime, blessing.getDescription());
     }
 
-    public static void curse(CommandContext co)
+    public static void curse(CommandContext co, EntityPlayer player, EnumCurse curse)
     {
-        var curses = EnumCurse.values();
-        var curse = BotdirilRnd.choose(curses);
-
         if (isBlessed(co, EnumBlessing.CANT_BE_CURSED))
         {
-            co.respond(String.format("***Your %s protected you from the %s.***", EnumBlessing.CANT_BE_CURSED.getLocalizedName(), curse.getLocalizedName()));
+            var who = player.equals(co.player) ? "Your" : "%s's".formatted(player.getMention());
+            co.respondf("***%s %s %s protected you from the %s.***", who, Icons.SCROLL_UNIQUE, EnumBlessing.CANT_BE_CURSED.getLocalizedName(), curse.getLocalizedName());
             return;
         }
 
@@ -43,19 +68,20 @@ public class Curser
 
         if (isCursed(co, curse))
         {
-            co.po.extendCurse(curse, millis);
+            co.userProperties.extendCurse(curse, millis);
         }
         else
         {
-            co.po.setCurse(curse, System.currentTimeMillis() + millis);
+            co.userProperties.setCurse(curse, System.currentTimeMillis() + millis);
         }
 
-        co.respond(String.format("You've been **cursed** with the **%s** for **%s**. **%s**", curse.getLocalizedName(), strTime, curse.getDescription()));
+        var who = player.equals(co.player) ? "You've" : "%s has".formatted(player.getMention());
+        co.respondf("%s been **cursed** with the **%s** for **%s**. **%s**", who, curse.getLocalizedName(), strTime, curse.getDescription());
     }
 
     public static boolean isBlessed(CommandContext co, EnumBlessing blessing)
     {
-        return isBlessed(co.po, blessing);
+        return isBlessed(co.userProperties, blessing);
     }
 
     public static boolean isBlessed(PropertyObject po, EnumBlessing blessing)
@@ -65,7 +91,7 @@ public class Curser
 
     public static boolean isCursed(CommandContext co, EnumCurse curse)
     {
-        return isCursed(co.po, curse);
+        return isCursed(co.userProperties, curse);
     }
 
     public static boolean isCursed(PropertyObject po, EnumCurse curse)
